--- a/src/pages/aboutPage.css
+++ b/src/pages/aboutPage.css
@@ -217,24 +217,14 @@
     margin: 0;
   }
 
-  .home-contact-button {
-    display: inline-block; /* Ensure it's treated as a block element */
-    padding: 10px 20px; /* Add padding for the button */
-    background-color: #FAFBFB; /* Button background color */
-    color: black; /* Text color */
-    text-align: center; /* Center text */
-    text-decoration: none; /* Remove underline */
-    border: none; /* Remove border */
-    border-radius: 5px; /* Rounded corners */
-    cursor: pointer; /* Pointer cursor on hover */
-    font-size: 16px; /* Font size */
-}
+  .email-address{
+    font-family: "Bebas Neue", sans-serif;
+    font-size:80px;
+    color: white;
+    opacity: 80%;
 
-/* Optional: Add hover effect */
-.home-contact-button:hover {
-    background-color: black; 
-    color: #FAFBFB;
-}
+  }
+
 /* For Tablets and Smaller Screens */
 @media (max-width: 1024px) {
     .index-hero-title {
@@ -331,9 +321,11 @@
       font-size: 66px;
     }
 
-    /* Button Styles for Mobile */
-    button {
-      font-size: 16px;
-      padding: 10px 20px;
-    }
+    .email-address{
+        font-family: "Bebas Neue", sans-serif;
+        font-size:30px;
+        color: white;
+        opacity: 100%;
+        
+      }
 }
