changed video settings and centered background on mobile screen

--- a/src/pages/aboutPage.css
+++ b/src/pages/aboutPage.css
@@ -171,7 +171,7 @@
 
     .paragraph-column, .image-column {
         max-width: 100%; /* Full width on small screens */
-        padding-left: 30px; /* Remove left padding */
+        /* padding-left: 30px; Remove left padding */
     }
 
     .backgroundCollage {
